# evo-data-converters

./: .bumpversion.cfg  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.md
.github/actions/install-uv/: action.yaml
.github/actions/linting/: action.yaml
.github/actions/testing/: action.yaml
.github/workflows/: on-merge.yaml  on-pull-request.yaml  on-release.yaml  publish-common.yaml  publish-duf.yaml  publish-gef.yaml  publish-gocad.yaml  publish-omf.yaml  publish-resqml.yaml  publish-ubc.yaml  publish-vtk.yaml  run-all-tests.yaml
samples/: README.md
samples/auth-and-evo-discovery/python/: README.md  evo-discovery.ipynb  native-app-token.ipynb  requirements.txt  service-app_token.ipynb
samples/convert-resqml/: publish-resqml.ipynb
samples/data-converters/python/: README.md  requirements.txt
samples/data-converters/python/convert-omf/: convert-omf.ipynb  publish-omf-script.py
samples/data-converters/python/convert-resqml/: attribute_converter_demo.ipynb  convert-points-properties.ipynb  convert-resqml.ipynb  convert_resqml.py  publish-resqml-script.py  publish-resqml.ipynb
samples/data-converters/python/detect-omf-file/: detect-omf-file.ipynb
samples/data-converters/python/export-omf/: export-blocksync-omf.ipynb  export-omf-script.py  export-omf.ipynb
samples/detect-omf-file/data/input/: test.omf
samples/export-omf/: export-omf-script.py
scripts/: omf_info.py  resqml_info.py
src/evo/data_converters/: README.md
src/evo/data_converters/common/: __init__.py  blockmodel_client.py  evo_client.py  exceptions.py  generate_paths.py  hexahedrons.py  publish.py  utils.py
src/evo/data_converters/gocad/: README.md
src/evo/data_converters/gocad/importer/: __init__.py  gocad_reader.py  gocad_to_evo.py  utils.py
src/evo/data_converters/omf/: README.md  __init__.py  omf_metadata.py  omf_reader_context.py  utils.py
src/evo/data_converters/omf/exporter/: __init__.py  blocksync_to_omf.py  evo_attributes_to_omf.py  evo_lineset_to_omf.py  evo_pointset_to_omf.py  evo_surface_to_omf.py  evo_to_omf.py  utils.py
src/evo/data_converters/omf/importer/: __init__.py  omf_attributes_to_evo.py  omf_blockmodel_to_evo.py  omf_lineset_to_evo.py  omf_pointset_to_evo.py  omf_surface_to_evo.py  omf_to_evo.py
src/evo/data_converters/omf/importer/blockmodel/: __init__.py  omf_attributes_to_blocksync.py  omf_blockmodel_to_blocksync.py  utils.py
src/evo/data_converters/resqml/: README.md  __init__.py  utils.py
src/evo/data_converters/resqml/importer/: __init__.py  _attribute_converters.py  _downhole_intervals_to_evo.py  _grid_converter.py  _surface_converter.py  _time_series_converter.py  _utils.py  conversion_options.py  resqml_to_evo.py
src/evo/data_converters/ubc/: README.md
src/evo/data_converters/ubc/importer/: __init__.py  ubc_reader.py  ubc_to_evo.py  utils.py
src/evo/data_converters/vtk/: README.md
src/evo/data_converters/vtk/importer/: __init__.py  _utils.py  exceptions.py  vtk_attributes_to_evo.py  vtk_image_data_to_evo.py  vtk_rectilinear_grid_to_evo.py  vtk_to_evo.py  vtk_unstructured_grid_to_evo.py
temp/: evo_schemas-2024.12.1.dev23-py3-none-any.whl
tests/common/: test_generate_paths.py  test_publish_geoscience_objects.py  test_utils.py
tests/gocad/importers/: test_gocad_to_evo.py
tests/gocad/importers/data/: 3D_grid_GOCAD.vo_data  non_orthogonal.vo
tests/omf/: test_evo_client.py  test_is_omf.py  test_omf_attribute_to_evo.py  test_omf_file_handler.py  test_omf_lineset_to_evo.py  test_omf_pointset_to_evo.py  test_omf_surface_to_evo.py  test_omf_to_evo.py
tests/omf/blockmodel/: test_blockmodel_to_blocksync.py  test_blockmodel_utils.py  test_blocksync_to_omf.py  test_convert_orient_to_angle.py  test_omf_attribute_to_blocksync.py
tests/omf/blockmodel/data/: rotated_block_model_ijk.omf  sample_data.parquet
tests/omf/data/: lineset_v1.omf  omf2.omf  pointset_v2.omf
tests/omf/exporter/: test_evo_attribute_to_omf.py  test_evo_lineset_to_omf.py  test_evo_pointset_to_omf.py  test_evo_surface_to_omf.py  test_evo_to_omf.py  test_exporter_utils.py
tests/resqml/importers/: test_attribute_properties.py  test_converter.py  test_downhole_intervals_to_evo.py  test_grid_converter.py  test_grid_converter_get_cells_to_include.py  test_grid_converter_make_geometery.py  test_grid_converter_unique_points.py  test_is_resqml.py  test_surface_converter.py  test_time_series_converter.py
tests/resqml/importers/data/: create_resqml_test_data.py  new_file.epc  new_file.h5
tests/ubc/importers/: test_ubc_reader.py  test_ubc_to_evo.py  test_ubc_utils.py
tests/vtk/importers/: test_vtk_attributes_to_evo.py  test_vtk_image_data_to_evo.py  test_vtk_rectilinear_grid_to_evo.py  test_vtk_to_evo.py  test_vtk_unstructured_grid_to_evo.py  vtk_test_helpers.py
tests/vtk/importers/data/: all_unsupported.vtm  collection.vtm  generate_test_data.py  unstructured_grid.vtu
tests/vtk/importers/data/collection/: collection_0.vti
