[build-system]
requires = ["setuptools"]

[project]
name = "evo_samples_internal"
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
version = "0.0.5"
dependencies = [
  "aiohttp",
  "evo-client-common>=2.0.1",
  "evo-object-client>=2.0.0",
  "nest-asyncio",
  "numpy<2.0.0",
  "omf>=1.0.1",
  "omf_python>=0.2",
  "pandas",
  "pyarrow",
  "pure-interface",
  "resqpy==4.18.10",
  "seequent-geoscience-object-schemas>=2024.6",
  "scipy",
  "vtk",
]

[dependency-groups]
dev = [
  "build",
  "mypy",
  "pre-commit",
  "pytest>=8.2",
  "pytest-asyncio",
  "ruff",
  "requests-mock"
]

# Optional dependencies for running notebooks
notebooks = ["evo-client-common[notebooks]", "jupyter"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".git-rewrite",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "venv",
]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP006"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
# Exclude this directory because the python scripts require extra dependencies to be installed.
exclude = ["samples/geoscience-objects/python/helpers"]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.uv.sources]
evo-object-client = { git = "ssh://git@github.com/seequent/evo-object-client" }
evo-client-common = { git = "ssh://git@github.com/seequent/evo-client-common" }
seequent-geoscience-object-schemas = { git = "ssh://git@github.com/seequent/geoscience-object-schemas" }

[[tool.uv.index]]
name = "artifactory"
url = "https://seequent.jfrog.io/artifactory/api/pypi/evo-converters-packages-pypi-local/simple"