[project]
name = "evo-data-converters"
description = "Convert data between geoscience formats and Evo geoscience objects to improve interoperability in geoscience applications"
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md", content-type = "text/markdown" }
version = "0.1.0"
dependencies = [
  "evo-data-converters-common",
  "evo-data-converters-duf ; platform_system == \"Windows\"",
  "evo-data-converters-gef",
  "evo-data-converters-gocad",
  "evo-data-converters-omf",
  "evo-data-converters-resqml",
  "evo-data-converters-ubc",
  "evo-data-converters-vtk",
]

[project.optional-dependencies]
"notebooks" = [
    "evo-sdk-common[notebooks]>=0.4.2",
    "notebook>=7.4.3",
]

[project.urls]
Source = "https://github.com/SeequentEvo/evo-python-sdk"
Tracker = "https://github.com/SeequentEvo/evo-python-sdk/issues"
Homepage = "https://www.seequent.com/"
Documentation = "https://developer.seequent.com/"

[dependency-groups]
dev = [
  "pre-commit >= 4",
  "ruff==0.9.1",              # keep in sync with .pre-commit-config.yaml
  "mypy",
]

[tool.uv.sources]
evo-data-converters-common = { workspace = true }
evo-data-converters-duf = { workspace = true }
evo-data-converters-gef = { workspace = true }
evo-data-converters-gocad = { workspace = true }
evo-data-converters-omf = { workspace = true }
evo-data-converters-resqml = { workspace = true }
evo-data-converters-ubc = { workspace = true }
evo-data-converters-vtk = { workspace = true }
omf2 = { git = "https://github.com/gmggroup/omf-rust", subdirectory = "omf-python" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".git-rewrite",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "venv",
]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP006"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["packages"]

[tool.hatch.build.targets.wheel]
include = ["packages"]
